change height of header on smaller resolutions, fixed overflowing header on small phone resolutions

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,6 +26,9 @@
   }
 
   @media (max-width: 1024px) {
+    height: 60px;
+    padding-top: 8px;
+
     &__content {
       max-width: 680px;
     }
@@ -33,7 +36,7 @@
 
   @media (max-width: 768px) {
     &__content {
-      min-width: 320px;
+      min-width: 280px;
       margin-left: 20px;
       margin-right: 20px;
     }
