--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -21,7 +21,6 @@
         display: none;
         position: absolute;
         width: 100%;
-        top: 100px;
         left: 0;
         margin-left: auto;
         margin-right: auto;
